@@ -66,8 +66,10 @@ WRITE_MEDIA = floppy
 # some mapping MEDIUM -> TYPE
 TYPE = $(MEDIUM)
 
-# Description of the initrd-list files.
+# Description of the initrd.list files.
 MANIFEST-INITRD_LIST = "contents of initrd"
+# Description of top-level udeb.list file.
+MANIFEST-UDEB_LIST = "contents of images in this directory tree"
 
 # Used to write a /etc/lsb-release file in the installer initrd.
 LSB_DISTRIB_ID=Debian
