@@ -91,6 +91,9 @@ debian-installer (trunk) UNRELEASED; urgency=low
     - Temporarily disable nano from all images, as it's linked to slang2 and
       the rest of d-i is not, and library reduction cannot cope with two
       slangs.
+    - Change initrd list format to match file format expected by katie (add
+      arch field).
+    - Add top-level udeb.list file for use by katie.
   * Kurt Roeckx
     - Changed libdevmapper1.00-udeb to libdevmapper1.01-udeb in the monolithic
       package list. Closes: #306976
